# zmeikaa

./: .gitignore  CMakeLists.txt  CMakeSettings.json
dep/: Vulkan.cmake  dep.cmake  glfw.cmake  glm.cmake
src/: main.cmake  main.cpp  main.hpp
src/Window/: Window.cmake  Window.cpp  Window.hpp
src/logic/: logic.cmake
src/logic/Game/: Game.cmake  Game.cpp  Game.hpp  enums.hpp  glfw_key_def.hpp
src/logic/toGraphics/: toGraphics.cmake  toGraphics.cpp  toGraphics.hpp
src/trash/: dbg.h  rgb.h  trash.cmake
src/trash/random/: random.cmake  random.cpp  random.hpp
src/vk/: vk.cmake  vk.cpp  vk.hpp
src/vk/Buffers/: Buffers.cmake  Buffers.cpp  Buffers.hpp
src/vk/CommandBuffers/: CommandBuffers.cmake  CommandBuffers.cpp  CommandBuffers.hpp
src/vk/CommandPool/: CommandPool.cmake  CommandPool.cpp  CommandPool.hpp
src/vk/DebugUtils/: DebugUtils.cmake  DebugUtils.cpp  DebugUtils.hpp
src/vk/DepthResource/: DepthResource.cmake  DepthResource.cpp  DepthResource.hpp
src/vk/DescriptorSet/: DescriptorSet.cmake  DescriptorSet.cpp  DescriptorSet.hpp
src/vk/Framebuffers/: Framebuffers.cmake  Framebuffers.cpp  Framebuffers.hpp
src/vk/ImageViews/: ImageViews.cmake  ImageViews.cpp  ImageViews.hpp
src/vk/Instance/: Instance.cmake  Instance.cpp  Instance.hpp
src/vk/LogicalDevice/: LogicalDevice.cmake  LogicalDevice.cpp  LogicalDevice.hpp
src/vk/LogicalQueues/: LogicalQueue.cmake  LogicalQueue.cpp  LogicalQueue.hpp
src/vk/PhysicalDevice/: PhysicalDevice.cmake  PhysicalDevice.cpp  PhysicalDevice.hpp
src/vk/PipeLines/: PipeLines.cmake  PipeLines.cpp  PipeLines.hpp
(+65 files in other folders)
